// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TUI inline tool wrapping snapshots consecutive grep, glob, and read rows at a narrow width 1`] = `
"   ✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/opencode/src (151 matches)
   ✱ Glob "**/*db*" in packages/opencode (6 matches)
   → Read packages/opencode/src/storage/db.ts [offset=1, limit=130]
   → Read packages/opencode/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const KILO_DB|KILO_DB|KILO_DEV|Global\\.Path\\.
     data|data =" in packages/opencode/src (115 matches)"
`;

exports[`TUI inline tool wrapping snapshots expanded tool errors under the tool text 1`] = `
"   ✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/opencode/src (151 matches)
   ✱ Glob "**/*db*" in packages/opencode (6 matches)
   → Read packages/opencode/src/storage/db.ts [offset=1, limit=130]
   → Read packages/opencode/src/index.ts [offset=1, limit=100]
     No LSP server available for this file type.
   ✱ Grep "export const KILO_DB|KILO_DB|KILO_DEV|Global\\.Path\\.
     data|data =" in packages/opencode/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a shell output block 1`] = `
"

  # List files

  $ ls

  file.ts

   ✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/opencode/src (151 matches)
   ✱ Glob "**/*db*" in packages/opencode (6 matches)
   → Read packages/opencode/src/storage/db.ts [offset=1, limit=130]
   → Read packages/opencode/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const KILO_DB|KILO_DB|KILO_DEV|Global\\.Path\\.
     data|data =" in packages/opencode/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a padded user message 1`] = `
"
  Check whether the next tool remains separated.


   ✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/opencode/src (151 matches)
   ✱ Glob "**/*db*" in packages/opencode (6 matches)
   → Read packages/opencode/src/storage/db.ts [offset=1, limit=130]
   → Read packages/opencode/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const KILO_DB|KILO_DB|KILO_DEV|Global\\.Path\\.
     data|data =" in packages/opencode/src (115 matches)"
`;
